# otus-cpp-hw_11

./: .travis.yml  CMakeLists.txt
async/: async.cpp
consumer/: consumtofile.cpp  consumtofile.h  consumtoterminal.cpp  consumtoterminal.h  ibulkconsumer.h
context/: contextholder.h  contextitm.h
datahodor/: bulkholder.h
processor/: cmdacceptor.h
producer/: bulkproducer.cpp  bulkproducer.h
